# pet_nlp

./: LICENSE  embeddings_from_scratch.ipynb  embeddings_model.ipynb  fine_tune.ipynb  pyproject.toml
