[tool.poetry]
name = "embeddings"
version = "0.1.0"
description = ""
authors = ["Nikolay Stepanov <nikolai.d.stepanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.6.0"
matplotlib = "3.10.0"
datasets = "3.2.0"
transformers = "4.48.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
